# llm-devin

./: AGENTS.md  README.md  ask_deepwiki.py  llm_devin.py  pyproject.toml  test_mcp_integration.py
.github/workflows/: publish.yml  test.yml
llm_devin/: __init__.py  _deepwiki.py  _devin.py
tests/: test_devin.py
